--- a/index.html
+++ b/index.html
@@ -68,49 +68,30 @@
         </div>
     </section>
 
-    <section class="portfolio" id="portfolio">
-        <h2 class="heading"><span id="mlReference"></span></h2>
+<section class="portfolio" id="portfolio">
+    <h2 class="heading"><span id="mlReference">References</span></h2>
 
-        <div class="portfolio-container">
-            <div class="portfolio-box">
-                <video controls src="12.15.2023 Being Hated is good.mp4" width="250">
-                <img src="referenceweb.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, beatae repellat recusandae ullam ex eligendi laudantium obcaecati commodi mollitia praesentium veritatis iure autem aperiam magnam animi exercitationem neque in possimus?</p>
+    <div class="portfolio-filters">
+        <button class="filter-btn" data-category="devinjatho" id="mlDevinJatho">Devin Jatho</button>
+        <button class="filter-btn" data-category="motivational" id="mlMotivational">Motivational</button>
+        <button class="filter-btn" data-category="podcast" id="mlPodcast">Podcast</button>
+        <button class="filter-btn" data-category="voiceover" id="mlVoiceover">Voiceover</button>
+        <button class="filter-btn" data-category="colorgrading" id="mlColorGrading">Color Grading</button>
+        <button class="filter-btn" data-category="gameplay" id="mlGameplay">Gameplay</button>
+        <button class="filter-btn" data-category="funny" id="mlFunny">Funny</button>
+        <button class="filter-btn" data-category="storytelling" id="mlStoryTelling">Story Telling</button>
+        <button class="filter-btn" data-category="carramp" id="mlCarRamp">Car ramp</button>
+        <button class="filter-btn" data-category="ai" id="mlAI">AI</button>
+        <button class="filter-btn" data-category="sport" id="mlSport">Sport</button>
+    </div>
+    <div class="portfolio-display">
+        <video id="portfolioVideo" controls autoplay muted loop width="250">
+            <source src="djatho.mp4" type="video/mp4">
+        </video>
+        <div class="portfolio-description" id="videoDescription">Devin Jatho Style</div>
+    </div>
+</section>
 
-                    <a href="#"><i class='bx bx-link' ></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <video controls loop src="10.04.2023.afk.fix.mp4" width="250">
-                <img src="referencecs.jpg" alt="">
-                <div class="portfolio-layer">
-                    <h4>1.6 Server</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, beatae repellat recusandae ullam ex eligendi laudantium obcaecati commodi mollitia praesentium veritatis iure autem aperiam magnam animi exercitationem neque in possimus?</p>
-
-                    <a href="#"><i class='bx bx-link' ></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <video controls autoplay muted loop src="How CHRISTIANITY Is FALLING Apart.yt.mp4" width="250">
-            </div>
-
-            <div class="portfolio-box">
-                <video controls autoplay muted loop src="2024.01.14 How Media Lies about charges.mp4" width="250">
-            </div>
-
-            <div class="portfolio-box">
-                <video controls autoplay muted loop src="12.03.2023 Ghosts are dangerous.mp4" width="250">
-            </div>
-
-            <div class="portfolio-box">
-                <video controls autoplay muted loop src="How To Free Your Mind.mp4" width="250">
-            </div>
-        </div>
-    </section>
 
     <section class="contact" id="contact">
         <h2 class="heading"><span id="mlContact2">Contact</span></h2>
@@ -123,7 +104,7 @@
 
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2024 by Heder | All Rights Reserved.</p>
+            <p>Copyright &copy; 2025 by Heder | All Rights Reserved.</p>
         </div>
 
         <div class="footer-iconTop">
