--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio 2024</title>
+    <title>Portfolio 2025</title>
     <link rel="stylesheet" href="reference.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -88,7 +88,7 @@
         <video id="portfolioVideo" controls autoplay muted loop width="250">
             <source src="djatho.mp4" type="video/mp4">
         </video>
-        <div class="portfolio-description" id="videoDescription">Devin Jatho Style</div>
+        <div class="portfolio-description" id="videoDescription">After Effects</div>
     </div>
 </section>
 
