New icon, voiceover

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div><a href="#portfolio" class="btn">Reference</a></div>
         </div>
 
-        <div class="home-img" style="padding-left: 100px;">
-            <img src="home-img5.png" alt="">
+        <div class="home-img" style="padding-left: 60px;">
+            <img src="new_logo_no_bg.png" alt="" style="width: 600px; height: auto;">
         </div>
     </section>
 
