--- a/old2/index.html
+++ b/old2/index.html
@@ -71,7 +71,7 @@
             <!-- Fő videó -->
             <div class="video-wrapper main-video">
                 <video id="portfolioVideo" controls autoplay muted loop width="250">
-                    <source src="djatho.mp4" type="video/mp4" class="video-settings">
+                    <source src="djatho.mp4" type="video/mp4">
                 </video>
                 <div class="portfolio-description" id="videoDescription">After Effects</div>
             </div>
@@ -110,7 +110,6 @@
                         <!-- A JavaScript tölti be ide a listaelemeket -->
                     </ul>
                     <p class="card-price" id="mlCardprice1">Ár: 10 000 Ft</p>
-                    <p class="card-price-caution" id="mlPricecaution1">The price can vary depending on the quality you require.</p>
                 </div>
             </div>
     
@@ -122,7 +121,6 @@
                         <!-- A JavaScript tölti be ide a listaelemeket -->
                     </ul>
                     <p class="card-price" id="mlCardprice2">Ár: 20 000 Ft</p>
-                    <p class="card-price-caution" id="mlPricecaution2">The price can vary depending on the quality you require.</p>
                 </div>
             </div>
     
@@ -134,7 +132,6 @@
                         <!-- A JavaScript tölti be ide a listaelemeket -->
                     </ul>
                     <p class="card-price" id="mlCardprice3">Ár: 30 000 Ft</p>
-                    <p class="card-price-caution" id="mlPricecaution3">The price can vary depending on the quality you require.</p>
                 </div>
             </div>
         </div>
@@ -166,6 +163,32 @@
     <script src="reference.js"></script>
 
     <script src="data.js"></script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            // Leírások és azonosítók tömbje
+            const descriptions = [
+                { desc: langData.HU.mlCarddesc1, listId: 'mlCarddesc1' },
+                { desc: langData.HU.mlCarddesc2, listId: 'mlCarddesc2' },
+                { desc: langData.HU.mlCarddesc3, listId: 'mlCarddesc3' }
+            ];
+
+            // Iterálás a leírások tömbjén
+            descriptions.forEach(({ desc, listId }) => {
+                const descriptionList = document.getElementById(listId);
+
+            // A meglévő elemek törlése a listából, ha szükséges
+                descriptionList.innerHTML = '';
+
+                // A listaelemek hozzáadása a megfelelő HTML elemhez
+                desc.forEach(item => {
+                    const li = document.createElement('li');
+                    li.textContent = item;
+                    descriptionList.appendChild(li);
+                });
+            });
+        });
+    </script>
 
 </body>
 </html>
