--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2024 by Heder | All Rights Reserved.</p>
+            <p>Copyright &copy; 2025 by Heder | All Rights Reserved.</p>
         </div>
 
         <div class="footer-iconTop">
@@ -166,5 +166,10 @@
     <script src="reference.js"></script>
 
     <script src="data.js"></script>
+
+    <!-- Supabase kliens betöltése -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.11.2/dist/supabase.js"></script>
+    <!-- Saját JavaScript fájl betöltése -->
+    <script src="log_visit.js"></script>
 </body>
 </html>
