particles, beetter managing, no bg

--- a/old 3/index.html
+++ b/old 3/index.html
@@ -43,8 +43,6 @@
             <img src="new_logo_no_bg.png" alt="" style="width: 600px; height: auto;">
         </div>
     </section>
-    <hr class="separator-gradient"/>
-
 
     <section class="portfolio" id="portfolio">
         <h2 class="heading"><span id="mlReference">References</span></h2>
@@ -87,8 +85,6 @@
             </div>
         </div>
     </section>
-    <hr class="separator-gradient"/>
-
 
     <section class="about" id="about">
         <div class="about-img">
@@ -102,7 +98,6 @@
             <a href="#portfolio" class="btn">Reference</a>
         </div>
     </section>
-    <hr class="separator-gradient"/>
 
     <section class="Rating" id="Rating">
         <h2 class="heading"><span id="mlRating2"></span></h2>
@@ -145,8 +140,6 @@
             </div>
         </div>
     </section>    
-    <hr class="separator-gradient"/>
-
 
     <section class="contact" id="contact">
         <h2 class="heading"><span id="mlContact2">Contact</span></h2>
@@ -167,23 +160,17 @@
         </div>
     </footer>
 
-    <script src="video-selector.js"></script>
-
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
-    <script src="typed.js"></script>
+    <script src="reference.js"></script>
 
     <script src="data.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
 
     <script src="particles.js"></script>
-
-    <script src="3d.js"></script>
-
-    <script src="scrollreveal.js"></script>
 
 </body>
 </html>
