--- a/index.html
+++ b/index.html
@@ -151,11 +151,23 @@
     <section class="contact" id="contact">
         <h2 class="heading"><span id="mlContact2">Contact</span></h2>
 
-        <div style="padding-left: 560px;"><a href="https://discordapp.com/users/1202298816922136657" target="_blank" class="btn">Discord</a></div>
-        <div style="padding-top: 30px; padding-left: 560px;"><a href="https://www.instagram.com/mergosolutions/" target="_blank" class="btn">Instagram</a></div>
-        <div style="padding-top: 30px; padding-left: 560px;"><a href="https://www.facebook.com/mergosolutions" target="_blank" class="btn">Facebook</a></div>
-        <div style="padding-top: 30px; padding-left: 560px;"><a target="_blank" class="btn"  onclick="copyEmail()">Email</a></div>
-        <div style="padding-top: 30px; padding-left: 560px;"><a href="https://twitter.com/MergoSolutions" target="_blank" class="btn">X</a></div>
+        <div class="contact-content">
+            <div class="social-media">
+                <!--<a href="#facebook"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="#twitter"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.tiktok.com/@mergosolutions" target="_blank"><i class='bx bxl-tiktok'></i>-->
+                <a href="https://www.instagram.com/mergosolutions/" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.facebook.com/mergosolutions" target="_blank"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="https://discordapp.com/users/1202298816922136657" target="_blank"><i class='bx bxl-discord-alt'></i></a>
+                <a href="https://twitter.com/MergoSolutions" target="_blank"><i class='bx bxl-twitter' ></i></a>
+                <a target="_blank" class="btn"  onclick="copyEmail()"><i class='bx bxl-gmail' ></i></a>
+            </div>
+            <!-- <a href="https://discordapp.com/users/1202298816922136657" target="_blank" class="btn">Discord</a>
+            <a href="https://www.instagram.com/mergosolutions/" target="_blank" class="btn">Instagram</a>
+            <a href="https://www.facebook.com/mergosolutions" target="_blank" class="btn">Facebook</a>
+            <a target="_blank" class="btn"  onclick="copyEmail()">Email</a>
+            <a href="https://twitter.com/MergoSolutions" target="_blank" class="btn">X</a>-->
+        </div>
     </section>
 
     <footer class="footer">
